--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <style>
     .jumbotron {
-    background-color:silver !important; 
+    background-color:gold !important; 
     }
   </style>
   
