--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
   <style>
     .jumbotron {
-    background-color:gold !important; 
+    background-color:silver !important; 
     }
   </style>
 </head>
